syntax = "proto3";

package rpc;

option go_package = "github.com/rishusahu23/fam-youtube/gen/api/rpc";

message PageContextResponse {
  string before_token = 1;
  bool has_before = 2;
  string after_token = 3;
  bool has_after = 4;
}

message PageContextRequest {
  oneof token {
    string before_token = 1 [json_name = "before_token"];
    string after_token = 2 [json_name = "after_token"];
  }
  uint32 page_size = 3 [json_name = "page_size"];
}
